--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,16 @@
 {
     "version": 2,
     "builds": [
-      { "src": "api/**/*.js", "use": "@vercel/node" }
+      {
+        "src": "server.js",
+        "use": "@vercel/node",
+        "config": {
+          "includeFiles": [
+            "prisma/schema.prisma",
+            "node_modules/.prisma/client/**"
+          ]
+        }
+      }
     ],
     "routes": [
       { "src": "/api/(.*)", "dest": "/api/$1" }
